--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "gh-pages": "^4.0.0",
     "mongodb": "^4.9.0",
     "next": "12.2.5",
     "next-auth": "3.29.10",
